force-app/main/default/objects/Inventory__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <label>Batch No</label>
    <type>Date</type>
</CustomField>