force-app/main/default/objects/Inventory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF(Product__r.Product_Brand__c != NULL , Product__r.Product_Brand__c ,&apos;&apos;)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>