force-app/main/default/objects/Inventory__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>