force-app/main/default/objects/Inventory__c/fields/Distributor_Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Primary_State__c</fullName>
    <formula>Distributor_Name__r.Primary_State__c</formula>
    <label>Distributor Primary State</label>
    <type>Text</type>
</CustomField>