force-app/main/default/objects/Inventory__c/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <formula>if( 
   Distributor_Name__r.Record_type_Name__c = &apos;Super Stockist&apos;,
   Distributor_Name__r.Record_type_Name__c,
   &apos;Direct Distributor&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Type</label>
    <type>Text</type>
</CustomField>