force-app/main/default/objects/Inventory__c/fields/Inventory_Value_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Value_with_GST__c</fullName>
    <formula>(Product_Rate__c * Quantity_in_hand__c) * 1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Value (with GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>