force-app/main/default/objects/Inventory__c/fields/Inventory_Value_without_GST__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Value_without_GST__c</fullName>
    <formula>Product_Rate__c * Quantity_in_hand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Value (without GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>