force-app/main/default/objects/Inventory__c/fields/Product_Code1__c.field-meta.xml
<CustomField>
    <fullName>Product_Code1__c</fullName>
    <formula>Product__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>