force-app/main/default/objects/Inventory__c/fields/Product_mrp__c.field-meta.xml
<CustomField>
    <fullName>Product_mrp__c</fullName>
    <formula>Product__r.MRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>