force-app/main/default/objects/Inventory__c/fields/Quantity_in_hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_hand__c</fullName>
    <label>Quantity in hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>