force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity_in_hand__c</columns>
    <columns>Product_mrp__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distributor_Name__c</field>
        <operation>contains</operation>
        <value>Prathiksha Enterprise - Kerur,Bagalkot</value>
    </filters>
    <label>All</label>
</ListView>