force-app/main/default/objects/Inventory__c/listViews/All_Distributor_Inventory.listView-meta.xml
<ListView>
    <fullName>All_Distributor_Inventory</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity_in_hand__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distributor_Name__c</field>
        <operation>contains</operation>
        <value>Dummy</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Kaju Draksh (1 x 4 Litres)</value>
    </filters>
    <label>All Distributor Inventory</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>